--- a/app/src/main/res/layout/content_drawer.xml
+++ b/app/src/main/res/layout/content_drawer.xml
@@ -2,8 +2,11 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.barhochman.theproject.Activities.MainActivity"
-    android:id="@+id/fragment_container">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".Activities.DrawerActivity"
+    tools:showIn="@layout/app_bar_drawer">
+
 </FrameLayout>
