--- a/app/src/main/res/layout/fragment_main_list.xml
+++ b/app/src/main/res/layout/fragment_main_list.xml
@@ -7,7 +7,6 @@
     android:id="@+id/mainFragmentId"
     tools:context=".Fragments.MainList">
 
-    <!-- TODO: Update blank fragment layout -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -60,15 +59,15 @@
                 android:id="@+id/outcomes"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:orientation="vertical" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/incomes"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:orientation="horizontal" />
         </LinearLayout>
 
     </LinearLayout>
