--- a/app/src/main/res/layout/fragment_add_transfer.xml
+++ b/app/src/main/res/layout/fragment_add_transfer.xml
@@ -149,8 +149,7 @@
                 <android.support.v7.widget.AppCompatButton
                     android:id="@+id/submit_button"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Button" />
+                    android:layout_height="wrap_content" />
 
             </TableRow>
 
