--- a/app/src/main/res/layout/fragment_main_list.xml
+++ b/app/src/main/res/layout/fragment_main_list.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:id="@+id/mainFragmentId"
     tools:context=".Fragments.MainList">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
@@ -70,6 +67,5 @@
                 android:orientation="horizontal" />
         </LinearLayout>
 
-    </LinearLayout>
 
-</FrameLayout>
+</LinearLayout>
