--- a/app/src/main/res/layout/fragment_add_transfer.xml
+++ b/app/src/main/res/layout/fragment_add_transfer.xml
@@ -149,7 +149,8 @@
                 <android.support.v7.widget.AppCompatButton
                     android:id="@+id/submit_button"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:text="@string/submit_button" />
 
             </TableRow>
 
