change favIcon from to fragment

--- a/app/src/main/res/layout/fragment_add_transfer.xml
+++ b/app/src/main/res/layout/fragment_add_transfer.xml
@@ -15,7 +15,7 @@
 
         <TableLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center_vertical|center_horizontal">
 
             <TableRow
@@ -137,11 +137,12 @@
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent">
 
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
                 <Space
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
